--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<img src="images/clip Board/img2.jpg">
 				</div>
 				<div class="content">
-					<h2>NANDINI</h2>
+					<h2>EVERYONE</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 					<a href="#">Read More</a>
