--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="scriptAnimation.js"></script>
 	
-	<h1>fpkbnsf</h1>
+	<h1>hey there</h1>
 	
 </body>
 </html>
