--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="discription">
 		<h1 id="disLogo">What Next?</h1>
 		<img src="images/paperPlane.png" class="paperPlane">
-		<h2 id="disInfo">The Career Advisory platforn you NEED.</h2>
+		<h2 id="disInfo">The Career Advisory platform you NEED</h2>
 	</div>
 
 
@@ -172,8 +172,5 @@
 	<script src="script1.js"></script>
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="scriptAnimation.js"></script>
-	
-	<h1>hey123</h1>
-	
 </body>
 </html>
