--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<title>Project What Next</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="images/logo.png" type="image/gif" sizes="16x16">
-	<link rel="stylesheet" type="text/css" href="style1.css">
-	<link rel="stylesheet" type="text/css" href="style2.css">
+	<!-- <link rel="icon" href="images/logo.png" type="image/gif" sizes="16x16"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="styleNew.css">
 </head>
 
 <body>
 	<div id="firstPage">
 		<div id="navbar">
-			<h1 class="logo" id="logo">Project What Next?</h1>
 			<ul>
 				<li><a class="navItem" id="navItem1" href="#firstPage">Home</a></li>
 				<li><a class="navItem" id="navItem2" href="#whatNextAnimation">About Us</a></li>
@@ -21,101 +20,70 @@
 				<li><a class="navItem" id="navItem4" href="#">Contact Us</a></li>
 			</ul>
 		</div>
-		<div class="fpage">
-			<h1 id="fpage-logo">What Next?</h1>
-			<p class="fpage-disc">A question millions ask but only millionaires have the solution to!</p>
-			<button href="#jump" class="fpage-button" type="button">START EXPLORING</button>
+		<div id="fpage">
+			<h1 id="fpageLogo">What Next?</h1>
+			<p id="fpageDisc">A question millions ask but only millionaires have the solution to!</p>
+			<button href="#jump" id="fpageButton" type="button">START EXPLORING</button>
 		</div>
-	</div>
+		<img id="thinkingMan" src="images/thinkMan.png">
 
-    
-    
-    <div id="page2">
-		<div class="discription">
+		<div id="discription">
 			<h1 id="disLogo">What Next?</h1>
-			<img src="images/paperPlane.png" class="paperPlane">
-			<h2 id="disInfo">The Career Advisory platform you NEED</h2>
+			<img src="images/paperPlane.png" id="paperPlane">
+			<h2 id="disInfo">Give a Take Off to your career.</h2>
 		</div>
+	</div>
 
-		<div id="clipCard">
-			<div class="container">
-				<div class="box">
-					<div class="imgBx">
-						<img src="images/clip Board/img1.jpg">
-					</div>
-					<div class="content">
-						<h2>HIIIIIII</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#">Read More</a>
-					</div>
+	<div id="clipCard">
+		<div class="container">
+			<div class="box easeLeft">
+				<div class="imgBx">
+					<img src="images/clip Board/img1.jpg">
 				</div>
-				<div class="box">
-					<div class="imgBx">
-						<img src="images/clip Board/img2.jpg">
-					</div>
-					<div class="content">
-						<h2>EVERYONE</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#">Read More</a>
-					</div>
+				<div class="content">
+					<h2>HIIIIIII</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href="#">Read More</a>
 				</div>
-				<div class="box">
-					<div class="imgBx">
-						<img src="images/clip Board/img3.jpg">
-					</div>
-					<div class="content">
-						<h2>HOW ARE</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#">Read More</a>
-					</div>
+			</div>
+			<div class="box easeLeft">
+				<div class="imgBx">
+					<img src="images/clip Board/img2.jpg">
 				</div>
-				<div class="box">
-					<div class="imgBx">
-						<img src="images/clip Board/img4.jpg">
-					</div>
-					<div class="content">
-						<h2>YOUUUUUU!</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#">Read More</a>
-					</div>
+				<div class="content">
+					<h2>EVERYONE</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+			<div class="box easeRight">
+				<div class="imgBx">
+					<img src="images/clip Board/img3.jpg">
+				</div>
+				<div class="content">
+					<h2>HOW ARE</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+			<div class="box easeRight">
+				<div class="imgBx">
+					<img src="images/clip Board/img4.jpg">
+				</div>
+				<div class="content">
+					<h2>YOUUUUUU!</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href="#">Read More</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	 
-	<div class="row">
-		<div id="newsLetter" class="column onHover">
-			<div class="beforeHover">
-				<h1 id="newsLetterLogo">SIGN UP FOR OUR<br> NEWSLETTER</h1>
-				<img id="newsletterIcon" src="images/icons/newsletter.png">
-			</div>
-			<div class="afterHover">
-				<h2 id="neverMissText">Never miss an update from us</h2>
-				<input type="text" class="formFields" id="userName" name="name">
-				<input type="text" class="formFields" id="emailName" name="email">
-				<button class="buttonInput formFields" id="signButton" type="button">Sign me up</button>
-			</div>
-		</div>
-		
-		<div id="ambassador" class="column onHover">
-			<div class="beforeHover">
-				<h1>JOIN OUR<br>AMBASSADOR PROGRAM</h1>
-			</div>
-			<div class="afterHover">
-				<h2>Represent us in your<br>university</h2>
-				<button id="buttonJoin" class="buttonInput formFields" type="button">JOIN PROGRAM</button>
-				<h3>"Help us grow"</h3>
-			</div>
-		</div>
-	</div>
-	
-
-	<div class="footer">
+	<div id="footer">
 		<ul id="footerListMain">
 			<ul id="list1" class="footerList">
 				<li class="footerItemHead"><strong>What Next</strong></li>
@@ -147,29 +115,24 @@
 		</ul>
 	</div>
 
-
-	<div class="signature">
-		<ul class="signList">
-			<li><h1  class="signatureItem" id="myName">created by Ketan Gupta</h1></li>
-			<li class="signatureItem abc" style="margin-right:20%;"><a href="#"><img class="signIcon" src="icons/mail.png"></a></li>
-			<li class="signatureItem abc"><a href="#"><img class="signIcon" src="icons/linkedin.png"></a></li>
-			<li class="signatureItem abc"><a href="#"><img class="signIcon" src="icons/github.png"></a></li>
+	<div id="signature">
+		<ul id="signList">
+			<li><h1 id="myName">created by Ketan Gupta</h1></li>
+			<li class="signatureItem" style="margin-right:20%;"><a href="#"><img class="signIcon" src="icons/mail.png"></a></li>
+			<li class="signatureItem"><a href="#"><img class="signIcon" src="icons/linkedin.png"></a></li>
+			<li class="signatureItem"><a href="#"><img class="signIcon" src="icons/github.png"></a></li>
 		</ul>
 	</div>
 
-	
-	<script src="jquery.js"></script>
-	<script src="introScript.js"></script>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/MotionPathPlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TweenLite.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/plugins/CSSPlugin.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TimelineLite.min.js"></script>	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/plugins/BezierPlugin.min.js"></script>
+
+	<script src="scriptNew.js"></script>
+	<script src="scriptNew2.js"></script>
 	<script src="script1.js"></script>
-	<script src="https://unpkg.com/scrollreveal"></script>
-	<script src="scriptAnimation.js"></script>
+	
 </body>
 </html>
