--- a/index.html
+++ b/index.html
@@ -1,138 +1,184 @@
 <!DOCTYPE html>
 <html>
-	
-<head>
-	<title>Project What Next</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="icon" href="images/logo.png" type="image/gif" sizes="16x16"> -->
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styleNew.css">
-</head>
+  <head>
+    <title>Project What Next</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styleNew.css" />
+  </head>
 
-<body>
-	<div id="firstPage">
-		<div id="navbar">
-			<ul>
-				<li><a class="navItem" id="navItem1" href="#firstPage">Home</a></li>
-				<li><a class="navItem" id="navItem2" href="#whatNextAnimation">About Us</a></li>
-				<li><a class="navItem" id="navItem3" href="#">Services</a></li>
-				<li><a class="navItem" id="navItem4" href="#">Contact Us</a></li>
-			</ul>
-		</div>
-		<div id="fpage">
-			<h1 id="fpageLogo">What Next?</h1>
-			<p id="fpageDisc">A question millions ask but only millionaires have the solution to!</p>
-			<button href="#jump" id="fpageButton" type="button">START EXPLORING</button>
-		</div>
-		<img id="thinkingMan" src="images/thinkMan.png">
+  <body>
+    <div id="firstPage">
+      <div id="navbar">
+        <h1>What next?</h1>
 
-		<div id="discription">
-			<h1 id="disLogo">What Next?</h1>
-			<img src="images/paperPlane.png" id="paperPlane">
-			<h2 id="disInfo">Give a Take Off to your career.</h2>
-		</div>
-	</div>
+        <ul>
+          <li>
+            <a href="#firstPage">Home</a>
+          </li>
+          <li>
+            <a href="#whatNextAnimation">About Us</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Contact Us</a>
+          </li>
+        </ul>
+      </div>
 
-	<div id="clipCard">
-		<div class="container">
-			<div class="box easeLeft">
-				<div class="imgBx">
-					<img src="images/clip Board/img1.jpg">
-				</div>
-				<div class="content">
-					<h2>HIIIIIII</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-					<a href="#">Read More</a>
-				</div>
-			</div>
-			<div class="box easeLeft">
-				<div class="imgBx">
-					<img src="images/clip Board/img2.jpg">
-				</div>
-				<div class="content">
-					<h2>EVERYONE</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-					<a href="#">Read More</a>
-				</div>
-			</div>
-			<div class="box easeRight">
-				<div class="imgBx">
-					<img src="images/clip Board/img3.jpg">
-				</div>
-				<div class="content">
-					<h2>HOW ARE</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-					<a href="#">Read More</a>
-				</div>
-			</div>
-			<div class="box easeRight">
-				<div class="imgBx">
-					<img src="images/clip Board/img4.jpg">
-				</div>
-				<div class="content">
-					<h2>YOUUUUUU!</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-					<a href="#">Read More</a>
-				</div>
-			</div>
-		</div>
-	</div>
+      <div class="homePage">
+        <div id="cardBox">
+          <img class="logo" src="/images/logo.png" alt="logo" />
+          <p id="pageDiscription">
+            A question millions ask<br />
+            but only millionaires have the solution to!
+          </p>
+          <button href="#jump" id="pageButton" type="button">
+            START EXPLORING
+          </button>
+        </div>
 
-	<div id="footer">
-		<ul id="footerListMain">
-			<ul id="list1" class="footerList">
-				<li class="footerItemHead"><strong>What Next</strong></li>
-				<li><a class="footerItem" href="#">About</a></li>
-				<li><a class="footerItem" href="#">Careers</a></li>
-				<li><a class="footerItem" href="#">Catalog</a></li>
-				<li><a class="footerItem" href="#">abc</a></li>
-			</ul>
-			<ul id="list2" class="footerList">
-				<li class="footerItemHead"><strong>Communities</strong></li>
-				<li><a class="footerItem" href="#">Students</a></li>
-				<li><a class="footerItem" href="#">Teachers</a></li>
-				<li><a class="footerItem" href="#">Developers</a></li>
-				<li><a class="footerItem" href="#">Testers</a></li>
-			</ul>
-			<ul id="list3" class="footerList">
-				<li class="footerItemHead"><strong>More</strong></li>
-				<li><a class="footerItem" href="#">Terms and conditions</a></li>
-				<li><a class="footerItem" href="#">Help</a></li>
-				<li><a class="footerItem" href="#">Report Error</a></li>
-				<li><a class="footerItem" href="#">Contact Us</a></li>
-			</ul>
-			<ul class="socialList footerList">
-				<li class="socialIcon"><a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"></a></li>
-				<li class="socialIcon"><a href="#"><img src="https://img.icons8.com/color/48/000000/twitter.png"></a></li>
-				<li class="socialIcon"><a href="#"><img src="https://img.icons8.com/color/48/000000/gmail.png"></a></li>
-				<li class="socialIcon"><a href="#"><img src="https://img.icons8.com/color/48/000000/linkedin.png"></a></li>
-			</ul>
-		</ul>
-	</div>
+        <img id="thinkingMan" src="images/thinkMan.png" />
+      </div>
 
-	<div id="signature">
-		<ul id="signList">
-			<li><h1 id="myName">created by Ketan Gupta</h1></li>
-			<li class="signatureItem" style="margin-right:20%;"><a href="#"><img class="signIcon" src="icons/mail.png"></a></li>
-			<li class="signatureItem"><a href="#"><img class="signIcon" src="icons/linkedin.png"></a></li>
-			<li class="signatureItem"><a href="#"><img class="signIcon" src="icons/github.png"></a></li>
-		</ul>
-	</div>
+      <!-- <div id="discription">
+        <h1 id="disLogo">What Next?</h1>
+        <img src="images/paperPlane.png" id="paperPlane" />
+        <h2 id="disInfo">Give a Take Off to your career.</h2>
+      </div> -->
+    </div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/gsap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/MotionPathPlugin.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <div id="clipCard">
+      <div class="container">
+        <div class="box easeLeft">
+          <div class="imgBx">
+            <img src="images/clip Board/img1.jpg" />
+          </div>
+          <div class="content">
+            <h2>HIIIIIII</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="box easeLeft">
+          <div class="imgBx">
+            <img src="images/clip Board/img2.jpg" />
+          </div>
+          <div class="content">
+            <h2>EVERYONE</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="box easeRight">
+          <div class="imgBx">
+            <img src="images/clip Board/img3.jpg" />
+          </div>
+          <div class="content">
+            <h2>HOW ARE</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="box easeRight">
+          <div class="imgBx">
+            <img src="images/clip Board/img4.jpg" />
+          </div>
+          <div class="content">
+            <h2>YOUUUUUU!</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-	<script src="scriptNew.js"></script>
-	<script src="scriptNew2.js"></script>
-	<script src="script1.js"></script>
-	
-</body>
+    <div id="footer">
+      <ul id="footerListMain">
+        <ul id="list1" class="footerList">
+          <li class="footerItemHead"><strong>What Next</strong></li>
+          <li><a class="footerItem" href="#">About</a></li>
+          <li><a class="footerItem" href="#">Careers</a></li>
+          <li><a class="footerItem" href="#">Catalog</a></li>
+          <li><a class="footerItem" href="#">abc</a></li>
+        </ul>
+        <ul id="list2" class="footerList">
+          <li class="footerItemHead"><strong>Communities</strong></li>
+          <li><a class="footerItem" href="#">Students</a></li>
+          <li><a class="footerItem" href="#">Teachers</a></li>
+          <li><a class="footerItem" href="#">Developers</a></li>
+          <li><a class="footerItem" href="#">Testers</a></li>
+        </ul>
+        <ul id="list3" class="footerList">
+          <li class="footerItemHead"><strong>More</strong></li>
+          <li><a class="footerItem" href="#">Terms and conditions</a></li>
+          <li><a class="footerItem" href="#">Help</a></li>
+          <li><a class="footerItem" href="#">Report Error</a></li>
+          <li><a class="footerItem" href="#">Contact Us</a></li>
+        </ul>
+        <ul class="socialList footerList">
+          <li class="socialIcon">
+            <a href="#"
+              ><img
+                src="https://img.icons8.com/color/48/000000/facebook-new.png"
+            /></a>
+          </li>
+          <li class="socialIcon">
+            <a href="#"
+              ><img src="https://img.icons8.com/color/48/000000/twitter.png"
+            /></a>
+          </li>
+          <li class="socialIcon">
+            <a href="#"
+              ><img src="https://img.icons8.com/color/48/000000/gmail.png"
+            /></a>
+          </li>
+          <li class="socialIcon">
+            <a href="#"
+              ><img src="https://img.icons8.com/color/48/000000/linkedin.png"
+            /></a>
+          </li>
+        </ul>
+      </ul>
+    </div>
+
+    <div id="signature">
+      <ul id="signList">
+        <li><h1 id="myName">created by Ketan Gupta</h1></li>
+        <li class="signatureItem" style="margin-right: 20%">
+          <a href="#"><img class="signIcon" src="icons/mail.png" /></a>
+        </li>
+        <li class="signatureItem">
+          <a href="#"><img class="signIcon" src="icons/linkedin.png" /></a>
+        </li>
+        <li class="signatureItem">
+          <a href="#"><img class="signIcon" src="icons/github.png" /></a>
+        </li>
+      </ul>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/MotionPathPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+
+    <script src="scriptNew.js"></script>
+    <script src="scriptNew2.js"></script>
+    <script src="script1.js"></script>
+  </body>
 </html>
