--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="homePage">
         <div id="cardBox">
-          <img class="logo" src="./images/logo.png" alt="logo" />
+          <img class="logo" src="images/logo.png" alt="logo" />
           <p id="pageDiscription">
             A question millions ask<br />
             but only millionaires have the solution to!
