home page dark updated

--- a/index.html
+++ b/index.html
@@ -10,27 +10,32 @@
   <body>
     <div id="firstPage">
       <div id="navbar">
-        <h1>What next?</h1>
+        <h1 class="navLogo">What next?</h1>
 
         <ul>
           <li>
-            <a href="#firstPage">Home</a>
+            <a class="navItem" href="#firstPage">HOME</a>
           </li>
           <li>
-            <a href="#whatNextAnimation">About Us</a>
+            <a class="navItem" href="#whatNextAnimation">ABOUT US</a>
           </li>
           <li>
-            <a href="#">Services</a>
+            <a class="navItem" href="#">SERVICES</a>
           </li>
           <li>
-            <a href="#">Contact Us</a>
+            <a class="navItem" href="#">CONTACT US</a>
           </li>
         </ul>
+
+        <div class="navButton">
+          <button class="navSignIn">Sign in</button>
+          <button class="navSignUp">Sign up</button>
+        </div>
       </div>
 
       <div class="homePage">
         <div id="cardBox">
-          <img class="logo" src="./images/logo.png" alt="logo" />
+          <img id="pageLogo" class="logo" src="./images/logo.png" alt="logo" />
           <p id="pageDiscription">
             A question millions ask<br />
             but only millionaires have the solution to!
