nav bar responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="firstPage">
       <div id="navbar">
-        <h1 class="navLogo">What next?</h1>
+        <img src="./images/logo.png" alt="logo" class="navLogo" />
 
         <ul>
           <li>
@@ -27,15 +27,19 @@
           </li>
         </ul>
 
-        <div class="navButton">
+        <div class="navButtons">
           <button class="navSignIn">Sign in</button>
           <button class="navSignUp">Sign up</button>
+
+          <img
+            src="https://img.icons8.com/metro/26/ffffff/menu.png"
+            class="menuButton"
+          />
         </div>
       </div>
 
       <div class="homePage">
         <div id="cardBox">
-
           <img id="pageLogo" class="logo" src="./images/logo.png" alt="logo" />
           <p id="pageDiscription">
             A question millions ask<br />
