--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Project What Next</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styleNew.css" />
+    <link rel="stylesheet" type="text/css" href="styleSheet/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styleSheet/styleMain.css" />
   </head>
 
   <body>
@@ -117,68 +118,82 @@
       </div>
     </div>
 
-    <div id="footer">
-      <ul id="footerListMain">
-        <ul id="list1" class="footerList">
-          <li class="footerItemHead"><strong>What Next</strong></li>
+    <div class="footer">
+      <div class="footerMain">
+        <ul class="footerList">
+          <li class="footerItemHead">What Next</li>
           <li><a class="footerItem" href="#">About</a></li>
           <li><a class="footerItem" href="#">Careers</a></li>
           <li><a class="footerItem" href="#">Catalog</a></li>
           <li><a class="footerItem" href="#">abc</a></li>
         </ul>
-        <ul id="list2" class="footerList">
-          <li class="footerItemHead"><strong>Communities</strong></li>
+        <ul class="footerList">
+          <li class="footerItemHead">Communities</li>
           <li><a class="footerItem" href="#">Students</a></li>
           <li><a class="footerItem" href="#">Teachers</a></li>
           <li><a class="footerItem" href="#">Developers</a></li>
           <li><a class="footerItem" href="#">Testers</a></li>
         </ul>
-        <ul id="list3" class="footerList">
-          <li class="footerItemHead"><strong>More</strong></li>
+        <ul class="footerList">
+          <li class="footerItemHead">More</li>
           <li><a class="footerItem" href="#">Terms and conditions</a></li>
           <li><a class="footerItem" href="#">Help</a></li>
           <li><a class="footerItem" href="#">Report Error</a></li>
           <li><a class="footerItem" href="#">Contact Us</a></li>
         </ul>
-        <ul class="socialList footerList">
-          <li class="socialIcon">
-            <a href="#"
-              ><img
-                src="https://img.icons8.com/color/48/000000/facebook-new.png"
-            /></a>
-          </li>
-          <li class="socialIcon">
-            <a href="#"
-              ><img src="https://img.icons8.com/color/48/000000/twitter.png"
-            /></a>
-          </li>
-          <li class="socialIcon">
-            <a href="#"
-              ><img src="https://img.icons8.com/color/48/000000/gmail.png"
-            /></a>
-          </li>
-          <li class="socialIcon">
-            <a href="#"
-              ><img src="https://img.icons8.com/color/48/000000/linkedin.png"
-            /></a>
-          </li>
-        </ul>
-      </ul>
+      </div>
+
+      <div class="socialIcons">
+        <a href="#">
+          <img
+            class="icons"
+            src="https://img.icons8.com/color/48/000000/facebook-new.png"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="icons"
+            src="https://img.icons8.com/color/48/000000/twitter.png"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="icons"
+            src="https://img.icons8.com/color/48/000000/gmail.png"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="icons"
+            src="https://img.icons8.com/color/48/000000/linkedin.png"
+          />
+        </a>
+      </div>
     </div>
 
     <div id="signature">
-      <ul id="signList">
-        <li><h1 id="myName">created by Ketan Gupta</h1></li>
-        <li class="signatureItem" style="margin-right: 20%">
-          <a href="#"><img class="signIcon" src="icons/mail.png" /></a>
-        </li>
-        <li class="signatureItem">
-          <a href="#"><img class="signIcon" src="icons/linkedin.png" /></a>
-        </li>
-        <li class="signatureItem">
-          <a href="#"><img class="signIcon" src="icons/github.png" /></a>
-        </li>
-      </ul>
+      <h1 id="myName">
+        created by <span style="color: orange">Ketan Gupta</span>
+      </h1>
+      <a href="#">
+        <img
+          class="signIcon"
+          src="https://img.icons8.com/metro/26/ffffff/email.png"
+        />
+      </a>
+      <a href="#">
+        <img
+          class="signIcon"
+          src="https://img.icons8.com/metro/26/ffffff/linkedin.png"
+        />
+      </a>
+      <a href="#">
+        <img
+          style="width: 35px"
+          class="signIcon"
+          src="https://img.icons8.com/material-sharp/48/ffffff/github.png"
+        />
+      </a>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.5/gsap.min.js"></script>
@@ -187,8 +202,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 
-    <script src="scriptNew.js"></script>
-    <script src="scriptNew2.js"></script>
-    <script src="script1.js"></script>
+    <script src="/script/script1.js"></script>
+    <script src="/script/scriptNew.js"></script>
+    <script src="/script/scriptNew2.js"></script>
   </body>
 </html>
