--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 
-    <script src="/script/script1.js"></script>
-    <script src="/script/scriptNew.js"></script>
-    <script src="/script/scriptNew2.js"></script>
+    <script src="script/script1.js"></script>
+    <script src="script/scriptNew.js"></script>
+    <script src="script/scriptNew2.js"></script>
   </body>
 </html>
